--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/* Data Sci- class Portfolio */
+
 body {
   background-color: #FFDF00;  /* Light gray background */
   color: #333;                /* Dark gray text color for good contrast */
@@ -14,7 +16,7 @@ pre, code {
 }
 
 /* Change the color of headings */
-h1, h2, h3 {
+h1, h2, h3 {d
   color: #800000;  /* Dark blue-gray color for headings */
 }
 
